--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.8",
+    "@emotion/styled": "^11.10.8",
+    "@mui/material": "^5.12.2",
+    "@mui/x-data-grid": "^6.3.0",
     "@prisma/client": "^4.11.0",
     "@t3-oss/env-nextjs": "^0.2.1",
     "@tanstack/react-query": "^4.28.0",
@@ -17,6 +21,7 @@
     "@trpc/next": "^10.18.0",
     "@trpc/react-query": "^10.18.0",
     "@trpc/server": "^10.18.0",
+    "firebase": "^9.21.0",
     "next": "^13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
